added the leaderboard feature

--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
 <!doctype html>
 <html lang="en"> 
-  <head>
+
+<head>
     <meta charset="UTF-8" />
+
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <title>Capitals Quest</title>
+    <meta name="description" content="Learn all countries and their capitals easily with this interactive and educational web app." />
+    <meta name="keywords" content="countries, capitals, geography quiz, world countries, learning app" />
+    <meta name="author" content="Your Name" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Countries & Capital</title>
+
+    <meta property="og:title" content="Capitals Quest" />
+    <meta property="og:description" content="Learn all countries and their capitals through a simple and engaging interface." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://your-domain.netlify.app/" />
+    <meta property="og:image" content="https://your-domain.netlify.app/preview-image.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Capitals Quest" />
+    <meta name="twitter:description" content="Interactive app for learning countries and their capitals easily." />
+    <meta name="twitter:image" content="https://your-domain.netlify.app/preview-image.png" />
+
+    <meta name="theme-color" content="#ffffff" />
+
   </head>
   <body>
     <div id="root"></div>
